--- a/portfolio.html
+++ b/portfolio.html
@@ -44,14 +44,14 @@
 
         <!-- Проекти -->
         <h1 class="hidden">Проекти</h1>
-        <ul class="list">
+        <ul class="list projects">
           <li>
             <img
               src="./images/techno.jpg"
               alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту"
               width="370"
             />
-            <h2 class="header-text">Технокряк</h2>
+            <h2 class="projects-title">Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -60,7 +60,7 @@
               alt="Зображення двох баскетболистів які боряться за м'яч"
               width="370"
             />
-            <h2 class="header-text">Постер New Orlean vs Golden Star</h2>
+            <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -69,12 +69,12 @@
               alt="Лого ресторану Seafood на якому зображена риба"
               width="370"
             />
-            <h2 class="header-text">Ресторан Seafood</h2>
+            <h2 class="projects-title">Ресторан Seafood</h2>
             <p>Додаток</p>
           </li>
           <li>
             <img src="./images/prime.jpg" alt="Фото чорних повнорозмірних навушників" width="370" />
-            <h2 class="header-text">Проєкт Prime</h2>
+            <h2 class="projects-title">Проєкт Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -83,7 +83,7 @@
               alt="Фото на якому зображено дві невеличкі подарункові коробочки"
               width="370"
             />
-            <h2 class="header-text">Проєкт Boxes</h2>
+            <h2 class="projects-title">Проєкт Boxes</h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -92,7 +92,7 @@
               alt="Зображення монітору на якому відкритий сайт з картою світу"
               width="370"
             />
-            <h2 class="header-text">Inspiration has no Borders</h2>
+            <h2 class="projects-title">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -101,7 +101,7 @@
               alt="Фото відкритої книги з рызними зображеннями"
               width="370"
             />
-            <h2 class="header-text">Видання Limited Edition</h2>
+            <h2 class="projects-title">Видання Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -110,7 +110,7 @@
               alt="Фото ярлику на якому великими літерами написано LAB EL TAG"
               width="370"
             />
-            <h2 class="header-text">Проєкт LAB</h2>
+            <h2 class="projects-title">Проєкт LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -119,7 +119,7 @@
               alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом"
               width="370"
             />
-            <h2 class="header-text">Growing Business</h2>
+            <h2 class="projects-title">Growing Business</h2>
             <p>Додаток</p>
           </li>
         </ul>
