fixes according to technical tasks

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <main>
       <!-- Hero block-->
-      <section>
-        <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
+      <section class="hero">
+        <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
         <button class="button hero-button" type="button">Замовити послугу</button>
       </section>
 
@@ -63,7 +63,7 @@
 
       <!-- Чим ми займаємося -->
       <section>
-        <h2 class="h2-header">Чим ми займаємося</h2>
+        <h2 class="title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
             <img
@@ -90,28 +90,36 @@
       </section>
 
       <!-- Наша команда -->
-      <section>
-        <h2 class="h2-header">Наша команда</h2>
+      <section class="command-bg">
+        <h2 class="title">Наша команда</h2>
         <ul class="list">
           <li>
-            <img src="./images/igor_demiyanenko.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3 class="command command-header">Ігор Дем'яненко</h3>
-            <p class="command">Product Designer</p>
+            <div class="command-card">
+              <img src="./images/igor_demiyanenko.jpg" alt="Ігор Дем'яненко" width="270" />
+              <h3 class="command command-header">Ігор Дем'яненко</h3>
+              <p class="command">Product Designer</p>
+            </div>
           </li>
           <li>
-            <img src="./images/olga_repina.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3 class="command command-header">Ольга Рєпіна</h3>
-            <p class="command">Frontend Developer</p>
+            <div class="command-card">
+              <img src="./images/olga_repina.jpg" alt="Ольга Рєпіна" width="270" />
+              <h3 class="command command-header">Ольга Рєпіна</h3>
+              <p class="command">Frontend Developer</p>
+            </div>
           </li>
           <li>
-            <img src="./images/mykola_tarasov.jpg" alt="Микола Тарасов" width="270" />
-            <h3 class="command command-header">Микола Тарасов</h3>
-            <p class="command">Marketing</p>
+            <div class="command-card">
+              <img src="./images/mykola_tarasov.jpg" alt="Микола Тарасов" width="270" />
+              <h3 class="command command-header">Микола Тарасов</h3>
+              <p class="command">Marketing</p>
+            </div>
           </li>
           <li>
-            <img src="./images/mykhailo_ermakov.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3 class="command command-header">Михайло Єрмаков</h3>
-            <p class="command">UI Designer</p>
+            <div class="command-card">
+              <img src="./images/mykhailo_ermakov.jpg" alt="Михайло Єрмаков" width="270" />
+              <h3 class="command command-header">Михайло Єрмаков</h3>
+              <p class="command">UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
