--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
     </header>
 
     <main>
+      <h1 class="hidden">Портфоліо</h1>
       <!-- Фільтр -->
       <section>
         <ul class="list">
@@ -43,84 +44,105 @@
         </ul>
 
         <!-- Проекти -->
-        <h1 class="hidden">Проекти</h1>
         <ul class="list projects">
           <li>
-            <img
-              src="./images/techno.jpg"
-              alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту"
-              width="370"
-            />
-            <h2 class="projects-title">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/techno.jpg"
+                alt="Відкритий ноутбук на екрані якого відкрита сторінка сайту"
+                width="370"
+              />
+              <h2 class="projects-title">Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/new-orlean-vs-golden-star.jpg"
-              alt="Зображення двох баскетболистів які боряться за м'яч"
-              width="370"
-            />
-            <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/new-orlean-vs-golden-star.jpg"
+                alt="Зображення двох баскетболистів які боряться за м'яч"
+                width="370"
+              />
+              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/seafood.jpg"
-              alt="Лого ресторану Seafood на якому зображена риба"
-              width="370"
-            />
-            <h2 class="projects-title">Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/seafood.jpg"
+                alt="Лого ресторану Seafood на якому зображена риба"
+                width="370"
+              />
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p>Додаток</p>
+            </a>
           </li>
           <li>
-            <img src="./images/prime.jpg" alt="Фото чорних повнорозмірних навушників" width="370" />
-            <h2 class="projects-title">Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/prime.jpg"
+                alt="Фото чорних повнорозмірних навушників"
+                width="370"
+              />
+              <h2 class="projects-title">Проєкт Prime</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/boxes.jpg"
-              alt="Фото на якому зображено дві невеличкі подарункові коробочки"
-              width="370"
-            />
-            <h2 class="projects-title">Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/boxes.jpg"
+                alt="Фото на якому зображено дві невеличкі подарункові коробочки"
+                width="370"
+              />
+              <h2 class="projects-title">Проєкт Boxes</h2>
+              <p>Додаток</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/inspiration.jpg"
-              alt="Зображення монітору на якому відкритий сайт з картою світу"
-              width="370"
-            />
-            <h2 class="projects-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/inspiration.jpg"
+                alt="Зображення монітору на якому відкритий сайт з картою світу"
+                width="370"
+              />
+              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/limited-edition.jpg"
-              alt="Фото відкритої книги з рызними зображеннями"
-              width="370"
-            />
-            <h2 class="projects-title">Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/limited-edition.jpg"
+                alt="Фото відкритої книги з рызними зображеннями"
+                width="370"
+              />
+              <h2 class="projects-title">Видання Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/lab.jpg"
-              alt="Фото ярлику на якому великими літерами написано LAB EL TAG"
-              width="370"
-            />
-            <h2 class="projects-title">Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/lab.jpg"
+                alt="Фото ярлику на якому великими літерами написано LAB EL TAG"
+                width="370"
+              />
+              <h2 class="projects-title">Проєкт LAB</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/growing-business.jpg"
-              alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом"
-              width="370"
-            />
-            <h2 class="projects-title">Growing Business</h2>
-            <p>Додаток</p>
+            <a class="link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <img
+                src="./images/growing-business.jpg"
+                alt="Відкритий ноут-бук на екрані якого зображення чоловіка з планшетом"
+                width="370"
+              />
+              <h2 class="projects-title">Growing Business</h2>
+              <p>Додаток</p>
+            </a>
           </li>
         </ul>
       </section>
